apps/guacamole/base/guacamole-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacamole
  labels:
    app.kubernetes.io/name: guacamole
    app.kubernetes.io/component: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: guacamole
  template:
    metadata:
      labels:
        app.kubernetes.io/name: guacamole
        app.kubernetes.io/component: web
    spec:
      containers:
        - name: guacamole
          image: guacamole/guacamole:1.6.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
