apps/guacamole/base/guacd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacamole-guacd
  labels:
    app.kubernetes.io/name: guacamole-guacd
    app.kubernetes.io/component: guacd
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: guacamole-guacd
  template:
    metadata:
      labels:
        app.kubernetes.io/name: guacamole-guacd
        app.kubernetes.io/component: guacd
    spec:
      containers:
        - name: guacd
          image: guacamole/guacd:1.6.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4822
              name: guacd
          readinessProbe:
            tcpSocket:
              port: 4822
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 4822
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
