apps/guacamole/base/guacamole-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guacamole
  labels:
    app.kubernetes.io/name: guacamole
    app.kubernetes.io/component: web
spec:
  selector:
    app.kubernetes.io/name: guacamole
  ports:
    - name: http
      port: 80
      targetPort: 8080
