apps/guacamole/base/guacd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guacamole-guacd
  labels:
    app.kubernetes.io/name: guacamole-guacd
    app.kubernetes.io/component: guacd
spec:
  selector:
    app.kubernetes.io/name: guacamole-guacd
  ports:
    - name: guacd
      port: 4822
      targetPort: 4822
