apps/guacamole/base/postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guacamole-postgresql
  labels:
    app.kubernetes.io/name: guacamole-postgresql
    app.kubernetes.io/component: database
spec:
  selector:
    app.kubernetes.io/name: guacamole-postgresql
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
